# hello-project

./: CMakeLists.txt  HelloProjConfig.h.in  hello.cpp
.github/workflows/: CD  CI  CI.yml  cmake-single-platform.yml  my_workflow
Include/Basic/: message.h
Main/: CMakeLists.txt  hello.cpp
Src/Basic/: CMakeLists.txt  message.cpp
Test/: CMakeLists.txt  test-hello.cpp  test-version.cpp
